--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#packs" class="nav-link">Nos Packs</a>
                 <a href="#temoignages" class="nav-link">Témoignages</a>
                 <a href="#apropos" class="nav-link">À propos</a>
-                <a href="#contact" class="nav-link">Contact</a>
+                <a href="#ctaSection" class="nav-link">Contact</a>
             </div>
             <div class="hamburger" id="hamburger">
                 <span></span>
@@ -50,82 +50,162 @@
         </div>
     </section>
 
-        <!-- Packs Section -->
-        <section class="packs section" id="packs">
-            <div class="container">
-                <div class="section-header text-center">
-                    <h2 class="section-title">Nos Packs d'Accompagnement</h2>
-                    <p class="section-subtitle">Solutions sur-mesure pour chaque étape de votre développement</p>
+<section class="packs section" id="packs">
+    <div class="container">
+        <div class="section-header text-center">
+            <h2 class="section-title">Nos Packs d'Accompagnement</h2>
+            <p class="section-subtitle">Solutions sur-mesure pour chaque étape de votre développement</p>
+        </div>
+
+        <div class="packs-grid">
+            <!-- Pack Lancement -->
+            <div class="pack-card" data-pack="lancement">
+                <div class="pack-header">
+                    <div class="pack-icon">
+                        <i class="fas fa-rocket"></i>
+                    </div>
+                    <h3 class="pack-title">Pack Lancement</h3>
+                    <p class="pack-description">
+                        Pour les indépendants ou petites entreprises qui se lancent.
+                    </p>
+                    <div class="pack-price">À partir de 1000€</div>
                 </div>
 
-                <div class="packs-grid">
-                    <div class="pack-card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="pack-icon">
-                            <i class="fas fa-rocket"></i>
-                        </div>
-                        <h3 class="pack-title">Pack Lancement</h3>
-                        <p class="pack-description">
-                            Pour les indépendants ou petites entreprises qui se lancent.
-                        </p>
-                        <div class="pack-features">
-                            <span class="feature-tag">Création d’une identité visuelle simple</span>
-                            <span class="feature-tag">Mise en place d’un site vitrine</span>
-                            <span class="feature-tag">Création d’une page pro sur 1 ou 2 réseaux sociaux (Facebook, Insta, LinkedIn)</span>
-                            <span class="feature-tag">Formation express : comment bien utiliser ses outils au quotidien</span>
-                            <span class="feature-tag">Prix : à partir de 1000€</span>
-
-
-
-                        </div>
-                        <a href="#contact" class="btn btn-outline pack-cta">En savoir plus</a>
+                <div class="pack-features">
+                    <div class="feature-item">
+                        <i class="feature-bullet"></i>
+                        <span>Création d'une identité visuelle simple</span>
                     </div>
-
-                    <div class="pack-card" data-aos="fade-up" data-aos-delay="200">
-                        <div class="pack-badge">Populaire</div>
-                        <div class="pack-icon">
-                            <i class="fas fa-crown"></i>
-                        </div>
-                        <h3 class="pack-title">Pack Visibilité locale</h3>
-                        <p class="pack-description">
-                            Pour artisans, commerçants, TPE qui veulent attirer des clients rapidement.
-                        </p>
-                        <div class="pack-features">
-                            <span class="feature-tag">Création ou optimisation de la fiche Google Business Profile</span>
-                            <span class="feature-tag">Conception de supports de communication (flyer + affiche)</span>
-                            <span class="feature-tag">Pack Réseaux sociaux : 10 posts + 5 stories prêts à publier</span>
-                            <span class="feature-tag">Création et gestion des campagnes locales ads</span>
-                            <span class="feature-tag">Conseils pour relayer l’info localement (presse, partenariats, bouche-à-oreille digital)</span>
-                            <span class="feature-tag">Prix : à partir de 600€</span>
-                        </div>
-                        <a href="#contact" class="btn btn-primary pack-cta">En savoir plus</a>
+                    <div class="feature-item">
+                        <i class="feature-bullet"></i>
+                        <span>Mise en place d'un site vitrine</span>
                     </div>
-
-                    <div class="pack-card" data-aos="fade-up" data-aos-delay="300">
-                        <div class="pack-icon">
-                            <i class="fas fa-calendar-alt"></i>
-                        </div>
-                        <h3 class="pack-title">Pack Événementiel</h3>
-                        <p class="pack-description">
-                            Pour marquer un temps fort (lancement produit, portes ouvertes, soirée clients, inauguration)
-                        </p>
-                        <h4>Version Essentiel</h4>
-                        <div class="pack-features">
-                            <span class="feature-tag">Conception & organisation de l’événement</span>
-                            <span class="feature-tag">Création des supports de communication (invitation, posts réseaux, emailing)</span>
-                            <span class="feature-tag">Gestion des inscriptions/RSVP</span>
-                            <span class="feature-tag">Plan de communication avant & après l’événement</span>
-                            <span class="feature-tag">Prix : à partir de 600€</span>
-                        <h4>Version Premium</h4>
-                            <span class="feature-tag">Coordination des prestataires</span>
-                            <span class="feature-tag">Présence le jour J</span>
-                            <span class="feature-tag">Communication live (stories, posts)</span>
-                            <span class="feature-tag">Prix : à partir de 1200€</span>
-                        </div>
-                        <a href="#contact" class="btn btn-outline pack-cta">En savoir plus</a>
+                    <div class="feature-item">
+                        <i class="feature-bullet"></i>
+                        <span>Création d'une page pro sur 1 ou 2 réseaux sociaux</span>
                     </div>
+                    <div class="feature-item">
+                        <i class="feature-bullet"></i>
+                        <span>Formation express : utilisation des outils au quotidien</span>
+                    </div>
+                </div>
+
+                <div class="pack-footer">
+                    <button class="btn btn-outline pack-cta">En savoir plus</button>
                 </div>
             </div>
-        </section>
+
+            <!-- Pack Visibilité locale -->
+            <div class="pack-card featured" data-pack="visibilite">
+                <div class="pack-badge">Populaire</div>
+                <div class="pack-header">
+                    <div class="pack-icon">
+                        <i class="fas fa-eye"></i>
+                    </div>
+                    <h3 class="pack-title">Pack Visibilité locale</h3>
+                    <p class="pack-description">
+                        Pour artisans, commerçants, TPE qui veulent attirer des clients rapidement.
+                    </p>
+                    <div class="pack-price">À partir de 600€</div>
+                </div>
+
+                <div class="pack-features">
+                    <div class="feature-item">
+                        <i class="feature-bullet"></i>
+                        <span>Création/optimisation Google Business Profile</span>
+                    </div>
+                    <div class="feature-item">
+                        <i class="feature-bullet"></i>
+                        <span>Conception supports communication (flyer + affiche)</span>
+                    </div>
+                    <div class="feature-item">
+                        <i class="feature-bullet"></i>
+                        <span>Pack Réseaux sociaux : 10 posts + 5 stories</span>
+                    </div>
+                    <div class="feature-item">
+                        <i class="feature-bullet"></i>
+                        <span>Création et gestion campagnes locales ads</span>
+                    </div>
+                    <div class="feature-item">
+                        <i class="feature-bullet"></i>
+                        <span>Conseils relai info local (presse, partenariats)</span>
+                    </div>
+                </div>
+
+                <div class="pack-footer">
+                    <button class="btn btn-primary pack-cta">En savoir plus</button>
+                </div>
+            </div>
+
+            <!-- Pack Événementiel -->
+            <div class="pack-card" data-pack="evenementiel">
+                <div class="pack-header">
+                    <div class="pack-icon">
+                        <i class="fas fa-calendar-alt"></i>
+                    </div>
+                    <h3 class="pack-title">Pack Événementiel</h3>
+                    <p class="pack-description">
+                        Pour marquer un temps fort (lancement produit, portes ouvertes, soirée clients)
+                    </p>
+                    <div class="pack-versions">
+                        <div class="version-toggle">
+                            <button class="version-btn active" data-version="essentiel">Essentiel</button>
+                            <button class="version-btn" data-version="premium">Premium</button>
+                        </div>
+                        <div class="pack-price">
+                            <span class="price-essentiel">À partir de 600€</span>
+                            <span class="price-premium" style="display: none;">À partir de 1200€</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="pack-features">
+                    <div class="features-essentiel">
+                        <div class="feature-item">
+                            <i class="feature-bullet"></i>
+                            <span>Conception & organisation de l'événement</span>
+                        </div>
+                        <div class="feature-item">
+                            <i class="feature-bullet"></i>
+                            <span>Création supports communication</span>
+                        </div>
+                        <div class="feature-item">
+                            <i class="feature-bullet"></i>
+                            <span>Gestion des inscriptions/RSVP</span>
+                        </div>
+                        <div class="feature-item">
+                            <i class="feature-bullet"></i>
+                            <span>Plan communication avant & après</span>
+                        </div>
+                    </div>
+
+                    <div class="features-premium" style="display: none;">
+                        <div class="feature-item premium">
+                            <i class="feature-bullet"></i>
+                            <span>Tout le pack Essentiel inclus</span>
+                        </div>
+                        <div class="feature-item premium">
+                            <i class="feature-bullet"></i>
+                            <span>Coordination des prestataires</span>
+                        </div>
+                        <div class="feature-item premium">
+                            <i class="feature-bullet"></i>
+                            <span>Présence le jour J</span>
+                        </div>
+                        <div class="feature-item premium">
+                            <i class="feature-bullet"></i>
+                            <span>Communication live (stories, posts)</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="pack-footer">
+                    <button class="btn btn-outline pack-cta">En savoir plus</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <!-- Testimonials Section -->
 <section class="testimonials section" id="temoignages">
@@ -281,7 +361,7 @@
         </section>
 
     <!-- CTA Section -->
-    <section class="cta-section">
+    <section class="cta-section" id="ctaSection">
         <div class="cta-bg"></div>
         <div class="container">
             <h2>Prêt à booster votre visibilité dès aujourd'hui ?</h2>
@@ -489,7 +569,7 @@
 
         <div class="faq-cta">
             <p>Vous avez une autre question ?</p>
-            <a href="#contact" class="btn btn-primary">Contactez-nous</a>
+            <a href="#ctaSection" class="btn btn-primary">Contactez-nous</a>
         </div>
     </div>
 </section>
