modif btn outline avec border pour cta et modif bullets premium as essentiel

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
 
                 <div class="pack-footer">
-                    <button class="btn btn-outline pack-cta">En savoir plus</button>
+                    <a href="#ctaSection" class="btn btn-outline pack-cta">En savoir plus</a>
                 </div>
             </div>
 
@@ -133,7 +133,7 @@
                 </div>
 
                 <div class="pack-footer">
-                    <button class="btn btn-primary pack-cta">En savoir plus</button>
+                    <a href="#ctaSection" class="btn btn-primary pack-cta">En savoir plus</a>
                 </div>
             </div>
 
@@ -200,7 +200,7 @@
                 </div>
 
                 <div class="pack-footer">
-                    <button class="btn btn-outline pack-cta">En savoir plus</button>
+                    <a href="#ctaSection" class="btn btn-outline pack-cta">En savoir plus</a>
                 </div>
             </div>
         </div>
