modif contenu section why chose us

--- a/index.html
+++ b/index.html
@@ -9,6 +9,45 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+  <!-- Décor subtil de background - À placer juste après <body> -->
+<div class="site-background-decor">
+    <!-- Formes géométriques principales -->
+    <div class="bg-geometric-shapes">
+        <div class="bg-shape bg-shape-1"></div>
+        <div class="bg-shape bg-shape-2"></div>
+        <div class="bg-shape bg-shape-3"></div>
+        <div class="bg-shape bg-shape-4"></div>
+    </div>
+
+    <!-- Particules flottantes -->
+    <div class="bg-particles">
+        <div class="bg-particle bg-particle-1"></div>
+        <div class="bg-particle bg-particle-2"></div>
+        <div class="bg-particle bg-particle-3"></div>
+        <div class="bg-particle bg-particle-4"></div>
+        <div class="bg-particle bg-particle-5"></div>
+    </div>
+
+    <!-- Lignes subtiles -->
+    <div class="bg-lines">
+        <div class="bg-line bg-line-1"></div>
+        <div class="bg-line bg-line-2"></div>
+        <div class="bg-line bg-line-3"></div>
+    </div>
+
+    <!-- Motifs géométriques -->
+    <div class="bg-pattern bg-pattern-1"></div>
+    <div class="bg-pattern bg-pattern-2"></div>
+
+    <!-- Overlay de gradient -->
+    <div class="bg-overlay"></div>
+</div>
+
+<!-- Pour les effets spéciaux sur certaines sections, ajoutez ceci dans les sections hero et cta-section -->
+<!-- À placer à l'intérieur des sections .hero et .cta-section -->
+<!--
+<div class="bg-special-effect"></div>
+-->
       <nav class="navbar" id="navbar">
         <div class="nav-container">
             <div class="logo">
@@ -32,6 +71,7 @@
 
     <main>
       <section class="hero" id="accueil">
+        <div class="bg-special-effect"></div>
         <div class="hero-bg">
             <div class="floating-element element-1"></div>
             <div class="floating-element element-2"></div>
@@ -112,23 +152,23 @@
                 <div class="pack-features">
                     <div class="feature-item">
                         <i class="feature-bullet"></i>
-                        <span>Création/optimisation Google Business Profile</span>
+                        <span>Stratégie et plan d’actions de communication</span>
                     </div>
                     <div class="feature-item">
                         <i class="feature-bullet"></i>
-                        <span>Conception supports communication (flyer + affiche)</span>
+                        <span>Conception de supports de communication (flyer + affiche)</span>
                     </div>
                     <div class="feature-item">
                         <i class="feature-bullet"></i>
-                        <span>Pack Réseaux sociaux : 10 posts + 5 stories</span>
+                        <span>Community management</span>
                     </div>
                     <div class="feature-item">
                         <i class="feature-bullet"></i>
-                        <span>Création et gestion campagnes locales ads</span>
+                        <span>Création et gestion des campagnes ads</span>
                     </div>
                     <div class="feature-item">
                         <i class="feature-bullet"></i>
-                        <span>Conseils relai info local (presse, partenariats)</span>
+                        <span>Conseils pour développer votre visibilité locale (presse, partenariats, bouche-à-oreille, digital)</span>
                     </div>
                 </div>
 
@@ -308,8 +348,7 @@
                         </div>
                         <h3 class="feature-title">Expertise Reconnue</h3>
                         <p class="feature-description">
-                            Plus de 10 ans d'expérience dans l'accompagnement d'entrepreneurs
-                            avec un taux de réussite exceptionnel.
+                          10 ans d'expérience dans de grands groupes avec des stratégies ambitieuses des campagnes qui font vraiment la différence.
                         </p>
                     </div>
 
@@ -319,41 +358,47 @@
                         </div>
                         <h3 class="feature-title">Approche Personnalisée</h3>
                         <p class="feature-description">
-                            Chaque projet est unique. Nous adaptons nos solutions à vos besoins
-                            spécifiques et à vos objectifs.
+                            Chaque projet est unique, nous adaptons nos solutions à vos besoins, votre budget et vos ambitions.
                         </p>
                     </div>
 
                     <div class="feature-card" data-aos="fade-up" data-aos-delay="300">
                         <div class="feature-icon">
-                            <i class="fas fa-clock"></i>
+                            <i class="fas fa-bullseye"></i>
                         </div>
-                        <h3 class="feature-title">Résultats Rapides</h3>
+                        <h3 class="feature-title">Du concret, pas du blabla</h3>
                         <p class="feature-description">
-                            Méthodologie éprouvée pour des résultats concrets et mesurables
-                            dès les premières semaines.
+                            Chaque action est pensée pour générer un vrai impact : plus de clients, plus de visibilité et une communication qui soutient directement votre développement.
                         </p>
                     </div>
 
                     <div class="feature-card" data-aos="fade-up" data-aos-delay="400">
                         <div class="feature-icon">
-                            <i class="fas fa-shield-alt"></i>
+                            <i class="fas fa-calendar-check"></i>
                         </div>
-                        <h3 class="feature-title">Garantie Satisfaction</h3>
+                        <h3 class="feature-title">Des événements qui marquent</h3>
                         <p class="feature-description">
-                            Nous nous engageons sur vos résultats avec une garantie
-                            satisfaction ou remboursé.
+                            Des portes-ouvertes aux lancements de produits, nous organisons vos événements pour marquer les esprits et attirer vos clients.
                         </p>
                     </div>
 
                     <div class="feature-card" data-aos="fade-up" data-aos-delay="500">
                         <div class="feature-icon">
-                            <i class="fas fa-network-wired"></i>
+                            <i class="fas fa-user-friends"></i>
                         </div>
-                        <h3 class="feature-title">Réseau d'Experts</h3>
+                        <h3 class="feature-title">Un partenaire à vos côtés</h3>
                         <p class="feature-description">
-                            Accès à notre réseau de partenaires spécialisés : juristes,
-                            comptables, développeurs, designers.
+                            Nous ne faisons pas que de livrer un service : nous vous accompagnons, conseillons et restons disponibles pour faire évoluer vos projets.
+                        </p>
+                    </div>
+
+                    <div class="feature-card" data-aos="fade-up" data-aos-delay="500">
+                        <div class="feature-icon">
+                            <i class="fas fa-project-diagram"></i>
+                        </div>
+                        <h3 class="feature-title">Notre réseau à votre service</h3>
+                        <p class="feature-description">
+                            Profitez de notre réseau de partenaires locaux (photographe, vidéaste, imprimeur, prestataires) pour aller plus loin, sans chercher ailleurs.
                         </p>
                     </div>
                 </div>
@@ -363,9 +408,10 @@
     <!-- CTA Section -->
     <section class="cta-section" id="ctaSection">
         <div class="cta-bg"></div>
+        <div class="bg-special-effect"></div>
         <div class="container">
             <h2>Prêt à booster votre visibilité dès aujourd'hui ?</h2>
-            <p>Contactez-nous dès aujourd'hui pour discuter de votre projet</p>
+            <p>Contactez-nous pour discuter de votre projet</p>
             <button class="btn btn-white" id="demanderDevisBtn">On discute ?</button>
         </div>
     </section>
@@ -598,7 +644,7 @@
                     <h3 class="footer-title">Nos Services</h3>
                     <ul class="footer-links">
                         <li><a href="#packs">Pack Lancement</a></li>
-                        <li><a href="#packs">Pack Visibilité</a></li>
+                        <li><a href="#packs">Pack Visibilité locale</a></li>
                         <li><a href="#packs">Pack Événementiel</a></li>
                     </ul>
                 </div>
