modif contenu expertise

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                         </div>
                         <h3 class="feature-title">Expertise Reconnue</h3>
                         <p class="feature-description">
-                          10 ans d'expérience dans de grands groupes avec des stratégies ambitieuses des campagnes qui font vraiment la différence.
+                          10 ans d’expérience au sein de grands groupes, concevant des stratégies ambitieuses à fort impact.
                         </p>
                     </div>
 
@@ -366,7 +366,7 @@
                         <div class="feature-icon">
                             <i class="fas fa-bullseye"></i>
                         </div>
-                        <h3 class="feature-title">Du concret, pas du blabla</h3>
+                        <h3 class="feature-title">Orienté résultats, pensé pour vous</h3>
                         <p class="feature-description">
                             Chaque action est pensée pour générer un vrai impact : plus de clients, plus de visibilité et une communication qui soutient directement votre développement.
                         </p>
@@ -388,7 +388,7 @@
                         </div>
                         <h3 class="feature-title">Un partenaire à vos côtés</h3>
                         <p class="feature-description">
-                            Nous ne faisons pas que de livrer un service : nous vous accompagnons, conseillons et restons disponibles pour faire évoluer vos projets.
+                            Bien plus qu'un service : nous vous accompagnons, conseillons et restons disponibles pour faire évoluer vos projets.
                         </p>
                     </div>
 
@@ -398,7 +398,7 @@
                         </div>
                         <h3 class="feature-title">Notre réseau à votre service</h3>
                         <p class="feature-description">
-                            Profitez de notre réseau de partenaires locaux (photographe, vidéaste, imprimeur, prestataires) pour aller plus loin, sans chercher ailleurs.
+                            Profitez de notre réseau de partenaires locaux (photographe, vidéaste, imprimeur, etc.) pour aller plus loin, sans chercher ailleurs.
                         </p>
                     </div>
                 </div>
