--- a/index.html
+++ b/index.html
@@ -69,37 +69,38 @@
         </div>
     </nav>
 
-    <main>
-      <section class="hero" id="accueil">
-        <div class="bg-special-effect"></div>
-        <div class="hero-bg">
-            <div class="floating-element element-1"></div>
-            <div class="floating-element element-2"></div>
-            <div class="floating-element element-3"></div>
-        </div>
-        <div class="hero-content">
-            <h1 class="hero-title">
-                <span class="title-line">
+<main>
+  <section class="hero" id="accueil">
+      <div class="bg-special-effect"></div>
+      <div class="hero-bg">
+          <div class="floating-element element-1"></div>
+          <div class="floating-element element-2"></div>
+          <div class="floating-element element-3"></div>
+      </div>
+      <div class="hero-content">
+          <h1 class="hero-title">
+              <span class="title-line">
                   Faisons briller
                   <svg class="sparkle-star" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M12 2L14.09 8.26L20 10L14.09 11.74L12 18L9.91 11.74L4 10L9.91 8.26L12 2Z" fill="url(#starGradient)"/>
-                    <defs>
-                        <linearGradient id="starGradient" x1="4" y1="2" x2="20" y2="18" gradientUnits="userSpaceOnUse">
-                            <stop offset="0%" style="stop-color:#FFD700"/>
-                            <stop offset="100%" style="stop-color:#FFA500"/>
-                        </linearGradient>
-                    </defs>
-                </svg>
+                      <defs>
+                          <radialGradient id="starShine" cx="50%" cy="50%">
+                              <stop offset="0%" class="shine-center" style="stop-color:#FFF4C1; stop-opacity:1"/>
+                              <stop offset="40%" class="shine-mid" style="stop-color:#FFD700; stop-opacity:1"/>
+                              <stop offset="100%" style="stop-color:#FF8C00; stop-opacity:1"/>
+                          </radialGradient>
+                      </defs>
+                      <path d="M12 2L14.09 8.26L20 10L14.09 11.74L12 18L9.91 11.74L4 10L9.91 8.26L12 2Z" fill="url(#starShine)"/>
+                  </svg>
               </span>
               <span class="title-line accent">votre business</span>
-            </h1>
-            <p class="hero-subtitle">Nous créons vos outils de communication, vos sites web et vos événements pour que vous puissiez vous concentrer sur l’essentiel : votre activité !</p>
-            <div class="hero-buttons">
-                <a href="#packs" class="btn btn-primary">Découvrir nos packs</a>
-                <a href="#apropos" class="btn btn-secondary">Pourquoi nous choisir?</a>
-            </div>
-        </div>
-    </section>
+          </h1>
+          <p class="hero-subtitle">Nous créons vos outils de communication, vos sites web et vos événements pour que vous puissiez vous concentrer sur l'essentiel : votre activité !</p>
+          <div class="hero-buttons">
+              <a href="#packs" class="btn btn-primary">Découvrir nos packs</a>
+              <a href="#apropos" class="btn btn-secondary">Pourquoi nous choisir?</a>
+          </div>
+      </div>
+  </section>
 
 <section class="packs section" id="packs">
     <div class="container">
